# todo-cli

./: .gdb_history  .gitignore  CMakeLists.txt  README.md  main  todocli.sublime-project  todocli.sublime-workspace  todolist  ttys006
inc/: todolist.h
include/: config.h  display.h  displayObject.h  leftwin.h  topbar.h
src/: .main.cpp.swp  display.cpp  leftwin.c  main.c  main.cpp  submodule.md  todoelement.h  todolist.cpp  topbar.c
todolist.dSYM/Contents/Resources/DWARF/: todolist
